--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,8 @@
 }
 
 
-.limiter {
-    width: 100%;
-    margin: 0 auto;
-}
-.container-login100 {
+
+.container_login {
     width: 100%;
     min-height: 100vh;
     display: -webkit-box;
@@ -47,7 +44,7 @@
     position: relative;
     z-index: 1;
 }
-.container-login100::before {
+.container_login::before {
     content: "";
     display: block;
     position: absolute;
@@ -64,52 +61,18 @@
     width: 100%;
     min-height: 185px;
     position: relative;
-    background: #91b3d1 url(https://image.freepik.com/free-vector/cyber-data-security-online-concept-illustration-internet-security-information-privacy-protection_1150-37330.jpg) no-repeat;
-    background-size: auto;
-    background-position: center;
+
 }
 .login_topimg img {
     width: 100%;
     height: auto;
 }
-.login_topimg .logo_wrap {
-    border-radius: 5px;
-    background: #fff;
-    padding: 13px 55px;
-    position: relative;
-    top: -21px;
-    margin: 10px auto;
-    max-width: 255px;
-}
-#login .wrap-login100 {
+#login .login_container_formulario {
     background-color: #fff;
     padding: 20px 45px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     width: 100%;
-}
-
-.login100-form-title {
-    font-size: 25px;
-    color: #243762;
-    line-height: 1.2;
-    text-transform: uppercase;
-    text-align: center;
-    width: 100%;
-    display: block;
-}
-.login100-form-subtitle {
-    font-size: 16px;
-    color: #243762;
-    line-height: 1.2;
-    text-align: center;
-    width: 100%;
-    display: block;
-}
-.wrap-input100 {
-    position: relative;
-    width: 100%;
-    z-index: 1;
 }
 #login input {
     outline: none;
@@ -119,7 +82,7 @@
     display: inline-block;
     margin-bottom: 0.5rem;
 }
-.input-checkbox100 {
+.input_checkbox {
     display: none;
 }
 input {
@@ -232,36 +195,14 @@ input {
 .p-b-30 {
     padding-bottom: 30px;
 }
-.input-checkbox100:checked + .label-checkbox100::before {
+.input_checkbox:checked + .label_checkbox::before {
     color: #09569b;
 }
-.label-checkbox100::before {
-    content: "\f00c";
-    font-family: FontAwesome;
-    font-size: 13px;
-    color: transparent;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    border-radius: 2px;
-    background: #fff;
-    border: 1px solid #e6e6e6;
-    left: 0;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
+
+.label_checkbox::selection {
+    background: transparent
 }
-.label-checkbox100 {
+.label_checkbox {
     font-size: 14px;
     font-weight: normal;
     color: #999999;
@@ -277,20 +218,8 @@ input {
 .p-b-55 {
     padding-bottom: 55px;
 }
-.container-login100-form-btn {
-    width: 100%;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.login100-form-btn:hover {
-    background: #333333;
-}
-.label-checkbox100::before {
+
+.label_checkbox::before {
     content: "\f00c";
     font-family: FontAwesome;
     font-size: 13px;
@@ -316,43 +245,12 @@ input {
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-#login button:hover {
-    cursor: pointer;
-}
-.login100-form-btn {
-    font-size: 16px;
-    line-height: 1.5;
-    color: #fff;
-    text-transform: uppercase;
-    width: 100%;
-    height: 45px;
-    border-radius: 3px;
-    background: #09569b;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 25px;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    transition: all 0.4s;
-}
-#login button {
-    outline: none !important;
-    border: none;
-}
+
 @media (max-width: 768px) {
     .container {
         width: 750px;
     }
-    #login .wrap-login100 {
+    #login .login_container_formulario {
         padding: 27px;
-    }
-    .login_topimg .logo_wrap {
-        padding: 5px 55px;
     }
 }
