--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
+
 @charset "utf-8";
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+}
+
+:root{
+    --tamanho_icones_home: 35px;
 }
 
 .input_login .form-control{
@@ -245,7 +250,15 @@ input {
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
 }
-
+a{
+    color: #1cef94;
+}
+a:hover{
+    color: #18cc7e;
+}
+.bg_verde{
+    background-image: linear-gradient(0deg, #c2e8b1, #e8eef0);
+}
 
 .div_imagem_logotipo{
     align-self: center;
@@ -257,8 +270,69 @@ input {
     font-size: 6rem;
     line-height: 6rem;
 }
+.div_detalhes_loja_versao_atualizacao{
+    background: white;
+    border-radius: 10px;
+    padding: 10px;
+}
 
+.slide_lojas{
+    border-radius: 10px;
+}
+.slide_lojas  .slick-track{
+    display: flex;
+    align-items: center;
+}
 
+.div_icon_home{
+    border: white 2px solid;
+    border-radius: 200px;
+    width: auto;
+    display: block;
+    position: relative;
+    width: 90px;
+    height: 90px;
+}
+.div_icon_home i{
+    position: absolute;
+    margin-top: calc(50% - (var(--tamanho_icones_home)/2));
+    left: calc(50% - (var(--tamanho_icones_home)/2));
+    font-size: var(--tamanho_icones_home);
+}
+.div_cards_home .div_texto_cards_home{
+    border-left: white 2px solid;
+}
+
+.botao_verde{
+    background: #1cef94;
+    font-weight: bold;
+    color: white;
+    transform: .5s;
+}
+.botao_verde:hover{
+    background: #18cc7e;
+    font-weight: bold;
+    color: white;
+    transform: .5s;
+}
+.div_cards_home i{
+    color: #1cef94;
+    transition: all .5s;
+}
+.div_cards_home:hover i{
+    color: #18cc7e;
+    transition: all .5s;
+}
+.div_cards_home a{
+    text-decoration: none;
+    color: black;
+    transition: all .5s;
+}
+.div_cards_home:hover a{
+    text-decoration: none;
+    color: #18cc7e;
+    transition: all .5s;
+}
 
 @media (max-width: 768px) {
     .container {
