--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@ a:hover{
 
 .icone_atualizado_menu_dashboards{
     color: white;
-    background: #7ad439;
+    background: #1cef94;
     padding: 3px;
     border-radius: 4px;
     font-size: .9rem;
@@ -409,6 +409,47 @@ a:hover{
 }
 .multiselect .checkboxes label:hover {
     background-color: #eee;
+}
+
+/* SOBRESCRITA SLIDE JQUERY-UI */
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active {
+    border: 1px solid #18cc7e;
+    background: #1cef94;
+    font-weight: normal;
+    color: #454545;
+}
+
+.ui-slider .ui-slider-handle {
+    position: absolute;
+    z-index: 2;
+    width: .5em;
+    height: 1.2em;
+    cursor: pointer;
+    -ms-touch-action: none;
+    touch-action: none;
+}
+
+.ui-slider-horizontal .ui-slider-handle {
+    top: -.3em;
+    margin-left: 0em;
+}
+/* FIM DA SOBRESCRITA */
+.card_estatistica_menu_dashboard{
+    background: white;
+    border: 1px solid #18cc7e;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 15px #cecece;
+}
+
+.card_estatistica_menu_dashboard h5{
+    background: #18cc7e;
+    border-radius: 10px 10px 0 0;
+    color: white;
+    font-size: 1rem;
+}
+.card_estatistica_menu_dashboard p{
+    font-size: .9rem;
 }
 
 @media (max-width: 768px) {
